# libssh2-hs

./: .gitignore  .travis.yml  Makefile  README.md  cabal.project  libssh2.cabal  ssh-client.hs  stack.yaml
Network/SSH/Client/: Foreign.chs  LibSSH2.hs
Network/SSH/Client/LibSSH2/: Errors.chs  Errors.hs  Foreign.chs  Foreign.hs  Types.chs
include/: libssh2_local.h
libssh2/: Makefile  libssh2.cabal  ssh-client.hs
libssh2-conduit/: Makefile  libssh2-conduit.cabal  ssh-client.hs
libssh2-conduit/Network/SSH/Client/LibSSH2/: Conduit.hs
libssh2/Network/SSH/Client/: LibSSH2.hs
libssh2/Network/SSH/Client/LibSSH2/: Errors.chs  Errors.hs  Foreign.chs  Foreign.hs  Types.chs  Types.hs  WaitSocket.hs
libssh2/src/Network/SSH/Client/: LibSSH2.hs
libssh2/src/Network/SSH/Client/LibSSH2/: Errors.chs  Errors.hs  Foreign.chs  Types.chs  WaitSocket.hs
