Name:                libssh2-conduit
Version:             0.2.1

Synopsis:            Conduit wrappers for libssh2 FFI bindings (see libssh2 package).

Description:         This package provides Conduit interface (see conduit package) for
                     libssh2 FFI bindings (see libssh2 package). This allows one to
                     receive data from SSH channels lazily, without need to read
                     all channel output to the memory.

Homepage:            https://github.com/portnov/libssh2-hs

License:             BSD3

License-file:        LICENSE

Author:              IlyaPortnov

Maintainer:          portnov84@rambler.ru

Category:            Network

Build-type:          Simple

Extra-source-files:  Makefile, ssh-client.hs

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8

flag example-client
  description: Build the example client
  default: False

Library
  Exposed-modules:     Network.SSH.Client.LibSSH2.Conduit
  GHC-Options: -fwarn-unused-imports

  Build-depends:       base >= 4 && <5,
                       bytestring >= 0.10,
                       conduit >= 1.0.7,
                       libssh2 >= 0.2.0.5,
                       stm,
                       transformers

Executable hs-ssh-client
  if flag(example-client)
    Build-depends: base, libssh2 >= 0.2.0.5,
                   stm >= 2.4,
                   transformers,
                   libssh2-conduit >= 0.2.1,
                   conduit >= 1.0.7,
                   conduit-combinators >= 1.0.3,
                   text >= 1.2.2.0,
                   filepath, bytestring
  else
    buildable: False
  Main-Is: ssh-client.hs
  Other-modules:     Network.SSH.Client.LibSSH2.Conduit
  GHC-Options: -threaded -fwarn-unused-imports

Source-repository head
  type: git
  location: https://github.com/portnov/libssh2-hs
